<resources>
    <string name="app_name">Sutoko</string>
    <string name="notavailable_sentence">🕙 This chapter will be available from %1$s %2$s</string>
    <string name="trophy_activity_content">Each trophy brings you points, use them to unlock chapters!</string>
    <string name="trophy_activity_trophy_game_title_count_format">%1$d / %2$d</string>
    <string name="trophies_trophy_description_format">%1$s: %2$s</string>
    <string name="storypreview_version_format">Version %1$s</string>
    <string name="storypreview_more_button_text">Information</string>
    <string name="play">Play</string>
    <string name="sutoko_firstname">Name</string>
    <string name="sutoko_default_name">First name</string>
    <string name="sutoko_soon_available">Coming soon</string>
    <string name="sutoko_non_valid_entry">Invalid entry.</string>
    <string name="sutoko_game_not_available_yet">This game is not yet available</string>
    <string name="backup_reseted">Game data deleted</string>
    <string name="sutoko_cancel">Cancel</string>
    <string name="sutoko_okay">Okay</string>
    <string name="sutoko_confirm_game_reset">You will lose your progress</string>
    <string name="restart">Replay</string>
    <string name="sutoko_app_name">Sutoko</string>
    <string name="sutoko_main_title_long_stories">Long Stories</string>
    <string name="sutoko_main_title_short_stories">Short Stories</string>
    <string name="story_creation_text">You want to write your own text stories? Let\'s get started!</string>
    <string name="create_an_account">Create an account</string>
    <string name="your_nickname">Your nickname…</string>
    <string name="your_mail_address">Your email address…</string>
    <string name="your_password">Your password…</string>
    <string name="creation_account_avatar_upload_title">Upload a profile picture</string>
    <string name="creation_account_avatar_upload_subtitle">This photo will be visible to your players!</string>
    <string name="characteristic_title">Information</string>
    <string name="characteristic_button">Okay</string>
    <string name="characteristic_dice">Games</string>
    <string name="characteristic_heart">Players\' Favourites</string>
    <string name="histoire_sms_courte">SHORT SMS STORY</string>
    <string name="simplestorypreview_button_download_state_sentence">%1$d %%</string>
    <string name="simplestorypreview_button_download_state_downloadable">Download</string>
    <string name="simplestorypreview_button_download_state_play">Play</string>
    <string name="simplestorypreview_button_download_state_downloading">Downloading…</string>
    <string name="remove_ads">Playing without ads</string>
    <string name="sutoko_privacy_policy">Privacy Policy</string>
    <string name="sutoko_params_signal_a_bug">Report a bug</string>
    <string name="sutoko_params_credits">Sources and credits</string>
    <string name="sutoko_web_report_bug_back_confirm">Want to go back to the previous page?</string>
    <string name="sutoko_web_not_connected">You must be connected to the Internet to view this page.</string>
    <string name="loading">Loading…</string>
    <string name="sutoko_title_long_stories">Long Stories</string>
    <string name="sutoko_title_short_stories">Short Stories</string>
    <string name="sutoko_title_community">Create</string>
    <string name="sutoko_account_my_character">My character</string>
    <string name="sutoko_account_my_character_description">Your character\'s name is %1$s</string>
    <string name="sutoko_edit">Edit</string>
    <string name="sutoko_account_my_items">My purchases</string>
    <string name="sutoko_account_my_items_description">You haven\'t yet unlocked any items from the shop.</string>
    <string name="sutoko_see">Open</string>
    <string name="sutoko_connect">Sign in</string>
    <string name="sutoko_deconnect">Log out</string>
    <string name="sutoko_my_trophies">My trophies</string>
    <string name="sutoko_my_account">My Account</string>
    <string name="sutoko_my_trophies_description">You didn\'t unlock any trophies. Find them by venturing into Sutoko\'s stories.</string>
    <string name="sutoko_my_trophies_description_count_singular">You\'ve unlocked 1 trophy!</string>
    <string name="sutoko_my_trophies_description_count_plural">You\'ve unlocked %1$d worth of trophies!</string>
    <string name="sutoko_my_orders_description">You haven\'t unlocked any items in the shop yet.</string>
    <string name="sutoko_my_orders_description_count_singular">You have 1 item</string>
    <string name="sutoko_my_orders_description_count_plural">You have %1$d items</string>
    <string name="sutoko_points">Point</string>
    <string name="sutoko_points_plural">Points</string>
    <string name="sutoko_no_web_navigator_found">No default web browser found</string>
    <string name="store_link">https://teespring.com/en/stores/friendzoned-the-game</string>
    <string name="sutoko_outlet_item_owned">You already own this item</string>
    <string name="sutoko_account_creation_error_email_not_verified">You must verify your account by clicking on the link in the email.</string>
    <string name="sutoko_you_are_connected">You are logged in</string>
    <string name="sutoko_trophy">Trophy</string>
    <string name="sutoko_trophies">Trophies</string>
    <string name="sutoko_store_not_enough_points">You don\'t have enough points</string>
    <string name="sutoko_buy_login_required">Login Required</string>
    <string name="sutoko_buy_login_required_title">You must be logged in to purchase this content</string>
    <string name="sutoko_ok">OK</string>
    <string name="sutoko_confirm_unlock">Unlock this article?</string>
    <string name="sutoko_unlocking_product">Unlocking the item</string>
    <string name="sutoko_cannot_unlock_this_item">Unable to unlock this item</string>
    <string name="sutoko_congrats_item_unlocked">Congratulations! Congratulations! Article unlocked!</string>
    <string name="sutoko_buy_an_error_has_occured">An error has occurred. Check that you are properly connected to the Internet</string>
    <string name="sutoko_you_already_have_this_item">You already own this item</string>
    <string name="sutoko_information">Information</string>
    <string name="sutoko_account_creation_introduce_title">Create an account to write stories!</string>
    <string name="sutoko_continue">Continue</string>
    <string name="sutoko_account_creation_introduce_subtitle">Let\'s go, let\'s go!</string>
    <string name="sutoko_account_created">Successful creation! :)</string>
    <string name="sutoko_account_creation_we_sent_a_mail">We sent a confirmation email at %1$s</string>
    <string name="sutoko_account_creation_signup_cta">No account? Register here</string>
    <string name="sutoko_sign_in">Login</string>
    <string name="sutoko_short_sms_stories">Short sms story</string>
    <string name="sutoko_game_downloading">Game download (0%)…</string>
    <string name="sutoko_story_preview_replay">Replay</string>
    <string name="sutoko_trophies_title">My trophies</string>
    <string name="sutoko_outlet_subtitle">100%% sutoko experience</string>
    <string name="sutoko_outlet_title">Store</string>
    <string name="sutoko_my_orders_subtitle">My purchases and gifts</string>
    <string name="sutoko_my_orders_title">Library</string>
    <string name="sutoko_account_error_unknown">Make sure you are connected to the Internet.</string>
    <string name="sutoko_account_error_username_not_available">This username is already in use</string>
    <string name="sutoko_account_error_address_not_available">This email address is already in use.</string>
    <string name="sutoko_account_error_invalid_credentials">Invalid email and/or password.</string>
    <string name="sutoko_account_error_weak_password">Use a more complex password (letters, numbers, etc…)</string>
    <string name="sutoko_account_error_invalid_mail_address">Invalid email address.</string>
    <string name="sutoko_account_error_mail_provider_banned">Unauthorized email address provider.</string>
    <string name="sutoko_account_error_cgu">You must accept the terms of use to continue.</string>
    <string name="sutoko_account_error_invalid_password_confirm">Passwords are different.</string>
    <string name="sutoko_account_error_invalid_nickname_format">The nickname must not contain any special characters</string>
    <string name="sutoko_account_error_invalid_nickname_size">Invalid username. It must be between 4 and 16 characters.</string>
    <string name="sutoko_account_error_invalid_password_size">Invalid password. It must be between 4 and 50 characters.</string>
    <string name="sutoko_account_button_connection">Login</string>
    <string name="sutoko_account_button_loading">Loading…</string>
    <string name="sutoko_event_hello_sutoko_title">Ready to write short stories?</string>
    <string name="sutoko_event_hello_sutoko_description">Available!</string>
    <string name="sutoko_event_hello_sutoko_button_text">See</string>
    <string name="sutoko_event_hello_sutoko_url">https://sutoko.app/announce/hello-sutoko</string>
    <string name="sutoko_new">New</string>
    <string name="sutoko_account_creation_account_created">That\'s it! You\'re logged in!</string>
    <string name="sutoko_request_player_nickname_friendzone">You\'re playing Nick\'s story.nDo you want to change his name?</string>
    <string name="sutoko_story_require_update">Please update Sutoko on Google play, so you can play this game</string>
    <string name="sutoko_params_activity_delete_my_account_data">Delete my account and its data</string>
    <string name="sutoko_params_activity_delete_my_account_data_confirm">Are you sure you want to delete your account and stories?</string>
    <string name="sutoko_params_activity_reload_my_account_data">Reload my account data</string>
    <string name="sutoko_params_activity_reload_my_account_data_confirm">You are about to reload all you account data</string>
    <string name="sutoko_params_account_data_reloaded_success">Account data reloaded</string>
    <string name="sutoko_required_field">Required field</string>
    <string name="sutoko_form_birthday">Birthday</string>
    <string name="sutoko_download">Download</string>
    <string name="sutoko_downloading_state_storypreview">Downloading (%1$d%%)…</string>
    <string name="sutoko_update_state_storypreview">Updating (%1$d%%)…</string>
    <string name="sutoko_storypreview_remove_story_confirm">Remove the game?</string>
    <string name="storypreview_cannot_access_file_dirs">An error occurred trying to open the game.</string>
    <string name="sutoko_this_week">New</string>
    <string name="sutoko_favorite">Favourite</string>
    <string name="sutoko_previously">previously</string>
    <string name="create_a_story">Create a story</string>
    <string name="sutoko_publish">Publish</string>
    <string name="sutoko_create_story_play">Play</string>
    <string name="sutoko_main_bottom_navigationbar_stories">Games</string>
    <string name="sutoko_main_bottom_navigationbar_sommunity">Create</string>
    <string name="sutoko_main_topnavbar_button_account_description">Access your account information and stats</string>
    <string name="sutoko_main_topnavbar_button_options_description">Access sutoko options and parameters</string>
    <string name="sutoko_splashscreen_logo_content_description">Purpletear logo, directed by Hocine Belbouab (hocinehope)</string>
    <string name="sutoko_splashscreen_version_format">%1$s</string>
    <string name="sutoko_directives_connect_with_computer_description">Log in to <b>Sutoko.com</b> with a <b>computer</b>(Windows / Mac) and start creating your story</string>
    <string name="coming_soon">Coming soon</string>
    <string name="escape_game_title_1">Escape Game</string>
    <string name="escape_game_title_2">Rules</string>
    <string name="escape_game_title_3">Ranking</string>
    <string name="sutoko_shop">Shop</string>
</resources>