<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/escapegame.menu.home"
        android:enabled="true"
        android:icon="@drawable/escape_game_key"
        android:title="@string/escape_game_title_1"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/escapegame.menu.rules"
        android:enabled="true"
        android:icon="@drawable/escape_game_cards"
        android:title="@string/escape_game_title_2"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/escapegame.menu.rank"
        android:enabled="true"
        android:icon="@drawable/escape_game_crown"
        android:title="@string/escape_game_title_3"
        app:showAsAction="withText"/>

</menu>