<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/sutoko.splashscreen.video"
        android:layout_width="0dp"
        android:layout_height="170dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W, 1920:1080" />


    <ProgressBar
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:alpha="0.2"
        android:indeterminate="true"
        android:indeterminateTint="#FFF"
        android:indeterminateTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@id/sutoko.splashscreen.information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/sutoko.splashscreen.information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:gravity="center">

        <purpletear.fr.purpleteartools.fonts.OldPtSans
            android:id="@+id/sutoko.splashscreen.version.halloween"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/sutoko.splashscreen.version.container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_splashscreen_bottom"
            android:paddingTop="4dp"
            android:visibility="gone"
            android:paddingBottom="5dp"
            android:paddingStart="14dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingEnd="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:letterSpacing="0.09"
                android:textSize="12sp"
                android:textColor="#b72a4e"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/sutoko.splashscreen.version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sutoko_splashscreen_version_format"
                android:letterSpacing="0.09"
                android:layout_marginStart="8dp"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textColor="#c98fff"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <ImageView
            android:id="@+id/sutoko.splashscreen.images_purpletear"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/sutoko_splashscreen_logo_content_description" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>