<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.directive.DirectivesActivity"
        android:background="@drawable/gradient_gray_black_vertical">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline137"
            app:layout_constraintStart_toEndOf="@id/guideline136"
            app:layout_constrainedWidth="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintVertical_bias="0.45">

        <com.airbnb.lottie.LottieAnimationView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/lottie_computer"
                tools:ignore="ContentDescription" />

        <com.example.sharedelements.fonts.WorkSansBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_story"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="26dp" />

        <com.example.sharedelements.fonts.WorkSansLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sutoko_directives_connect_with_computer_description"
                android:textSize="16sp"
                android:lineSpacingExtra="3dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="12dp" />
    </LinearLayout>

    <com.example.sharedelements.fonts.PoppinsSemiBold
            android:id="@+id/sutoko_directives_button_okay"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp"
            android:background="@drawable/sutoko_button_rounded_pink"
            android:text="@string/sutoko_okay"
            android:textColor="@color/white"
            android:paddingStart="62dp"
            android:paddingEnd="62dp" />

    <ImageView
            android:id="@+id/sutoko_directives_images_star_1"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription"
            android:rotation="40"
            android:alpha="0.03" />

    <ImageView
            android:id="@+id/sutoko_directives_images_star_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription"
            android:rotation="20"
            android:alpha="0.02" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline136"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline137"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>